--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Dhruv Bansal</title>
-  <link rel="stylesheet" href="CSS\styles.css">
+  <link rel="stylesheet" href="styles.css">
   <link rel="icon" href="20190929_193542.ico">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
