--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </div>
   <div class="middle-container">
     <div class="profile">
-      <img  class="my-pic" src="F:\Web Dev\ HTML Personal site\20190929_193542.jpg" alt="Founder/Ceo">
+      <img  class="my-pic" src="20190929_193542.jpg" alt="Founder/Ceo">
       <h2>Hello.</h2>
       <p>Full Stack Web Developer.<br><img src="https://cdn-icons-png.flaticon.com/512/484/484167.png" height="20px" width="20px" alt="Location"> Agra, Uttar Pradesh. </p>
     </div>
