--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <div class="skill-row">
         <img class="my-pic1" src="https://cdn-icons-png.flaticon.com/512/919/919841.png" alt="C++-Programming">
         <h3>C++ Programming.</h3>
-        <p>I love solving coding problems and have been doing this from past 1 year on Codeforces.</p>
+        <p>I love solving coding problems and have been doing this from past 1.5 year.</p>
       </div>
       <div class="skill-row">
         <img class="my-pic2" src="https://cdn-icons-png.flaticon.com/512/1005/1005141.png" alt="Web-Developer">
