--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="profile">
       <img  class="my-pic" src="20190929_193542.jpg" alt="Founder/Ceo">
       <h2>Hello.</h2>
-      <p>Front End Web Developer.<br><img src="https://cdn-icons-png.flaticon.com/512/484/484167.png" height="20px" width="20px" alt="Location"> Agra, Uttar Pradesh. </p>
+      <p>Full Stack Web Developer.<br><img src="https://cdn-icons-png.flaticon.com/512/484/484167.png" height="20px" width="20px" alt="Location"> Agra, Uttar Pradesh. </p>
     </div>
     <hr class="hor1">
     <div class="skills">
@@ -32,7 +32,7 @@
       <div class="skill-row">
         <img class="my-pic1" src="https://cdn-icons-png.flaticon.com/512/919/919841.png" alt="C++-Programming">
         <h3>C++ Programming.</h3>
-        <p>I love solving coding problems and have been doing this from past 1.5 year.</p>
+        <p>I love solving coding problems and have been doing this from past two year.</p>
       </div>
       <div class="skill-row">
         <img class="my-pic2" src="https://cdn-icons-png.flaticon.com/512/1005/1005141.png" alt="Web-Developer">
