--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="profile">
       <img  class="my-pic" src="20190929_193542.jpg" alt="Founder/Ceo">
       <h2>Hello.</h2>
-      <p>Full Stack Web Developer.<br><img src="https://cdn-icons-png.flaticon.com/512/484/484167.png" height="20px" width="20px" alt="Location"> Agra, Uttar Pradesh. </p>
+      <p>Software Engineer.<br><img src="https://cdn-icons-png.flaticon.com/512/484/484167.png" height="20px" width="20px" alt="Location"> Agra, Uttar Pradesh. </p>
     </div>
     <hr class="hor1">
     <div class="skills">
